feat(core): implement production readiness features
- Add RBAC with Roles (ADMIN, USER) mapped to JWT

- Implement Exercise Catalog pagination

- Integrate Google OAuth2 API-first stateless authentication

- Enable Spring Boot Actuator for health and metrics

- Update PROJECT.md and gap_analysis.md documentations

- Maintain 100% test coverage (124 passing tests)